--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
-
+div {
+	width:200px;
+	background-color:purple;
+	border-left-style:solid;
+	border-left-color:green;
+	border-left-width:5px;
+	padding:10px;
+	font-size:20px;
+	color:white;
+}
 /* Your CSS Code here. */
